Fix device file contention when setting parameters on v4l cameras

Changed setting image processing parameters to use the open file
descriptor from the video source GstElement when available. This avoids
cases where settings cannot be set since the device file is already in
use by GStreamer.

[ChangeLog][CameraBinV4LImageProcessing] Use GstElement
"device-fd" property where possible to avoid multiple access to device
file

Fixes: QTBUG-121750
Change-Id: I8ebbd4c77c96c9c5b187190f594a40c6310a664f
Reviewed-by: Lars Sutterud <lars.sutterud@qt.io>
Reviewed-by: Tim Blechmann <tim@klingt.org>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>